objects/ASI_CRM_Promotion_Master__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Buy_X__c</fullName>
        <label>Buy X</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Discount__c</fullName>
        <label>Discount %</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_Get_Y__c</fullName>
        <label>Get Y</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Promotion_ID__c</fullName>
        <displayFormat>PM-{00000000}</displayFormat>
        <label>Promotion ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Buy X Get Y</fullName>
                </value>
                <value>
                    <fullName>Discount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Promotion Master</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Type__c</columns>
        <columns>ASI_CRM_Discount__c</columns>
        <columns>ASI_CRM_Buy_X__c</columns>
        <columns>ASI_CRM_Get_Y__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Promotion_Master__c.ASI_CRM_CN_Promotion_Master</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Promotion Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promotion Masters</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Promotion_Master</fullName>
        <active>true</active>
        <label>CN Promotion Master</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>CN_Mandatory_Field</fullName>
        <active>true</active>
        <errorConditionFormula>IF( RecordType.DeveloperName == &quot;ASI_CRM_CN_Promotion_Master&quot; &amp;&amp; ( ( ISPICKVAL( ASI_CRM_Type__c, &quot;Buy X Get Y&quot; ) &amp;&amp; ( ISNULL( ASI_CRM_Buy_X__c ) || ISNULL( ASI_CRM_Get_Y__c ) ) ) || ( ISPICKVAL( ASI_CRM_Type__c, &quot;Discount&quot; ) &amp;&amp; ISNULL( ASI_CRM_Discount__c ) ) ), True, False )</errorConditionFormula>
        <errorMessage>For Type = Buy X Get Y : Please fill-in Buy X and Get Y.
For Type = Discount : Please fill-in Discount %</errorMessage>
    </validationRules>
</CustomObject>